@@ -3,6 +3,7 @@
 #include <defobj.h> // defobj_java_call_init_tables
 #include "directory.h" // java_directory_init
 #include <misc.h> // xmalloc, strdup
+#include <swarmconfig.h>
 
 void 
 Java_swarm_SwarmEnvironment_initSwarm (JNIEnv *env, jobject obj, jobjectArray args)
@@ -17,15 +18,15 @@ Java_swarm_SwarmEnvironment_initSwarm (JNIEnv *env, jobject obj, jobjectArray ar
   argc = (*env)->GetArrayLength (env, args) + 1;   
   argv = (const char **) xmalloc (sizeof (const char *) * argc);
 
-  argv[0] = "java";
+  argv[0] = "javaswarm";
   for (i = 0; i < argc - 1; i++)
     {
       jstr = (*env)->GetObjectArrayElement (env, args, i);
-      utf = (const char *)(*env)->GetStringUTFChars (env, jstr, &isCopy);
+      utf = (const char *) (*env)->GetStringUTFChars (env, jstr, &isCopy);
       argv[i + 1] = isCopy ? (const char *) utf : strdup (utf);
     }
   java_directory_init (env);
   defobj_init_java_call_tables ((void *) env);
-  initSwarm (argc, (const char **)argv);
+  initSwarmApp (argc, argv, VERSION, "bug-swarm@santafe.edu");
 }
 
