@@ -3,9 +3,12 @@
 	* directory.m (create_class_refs): Initialize globalZone via
 	static field lookup in SwarmEnvironment class.
 
-	* SwarmEnvironment.m (Java_swarm_SwarmEnvironment_initSwarm): 
+	* SwarmEnvironment.m: Include swarmconfig.h (for VERSION).
+	(Java_swarm_SwarmEnvironment_initSwarm): 
 	Renamed from Java_SwarmEnvironment_initSwarm.
-	Fix off-by-one argv/argc problem.  Initialize argv[0] to "java".
+	Fix off-by-one argv/argc problem. 
+	Initialize argv[0] to "javaswarm".  Use initSwarmApp instead
+	of initSwarm.
 
 	* directory.m (create_class_refs): c_int is an Integer, not an Int.
 
